--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "NewsRoom"
 include ':app'
 include ':feature:news:data'
+include ':core_data'
