News presentation module

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include ':app'
 include ':feature:news:data'
 include ':core_data'
 include ':feature:news:domain'
+include ':feature:news:presentation'
