--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':feature:news:data'
 include ':core_data'
 include ':feature:news:domain'
 include ':feature:news:presentation'
+include ':feature:reels:presentation'
