--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation DaggerHilt.hiltAndroid
     kapt DaggerHilt.hiltCompiler
 
+    implementation project(Modules.reelsPresentation)
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
