reels domain layer

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':core_data'
 include ':feature:news:domain'
 include ':feature:news:presentation'
 include ':feature:reels:presentation'
+include ':feature:reels:domain'
