--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':feature:news:domain'
 include ':feature:news:presentation'
 include ':feature:reels:presentation'
 include ':feature:reels:domain'
+include ':feature:reels:data'
