--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,6 @@ include ':feature:news:data'
 include ':core_data'
 include ':feature:news:domain'
 include ':feature:news:presentation'
-include ':feature:reels:presentation'
-include ':feature:reels:domain'
-include ':feature:reels:data'
+//include ':feature:reels:presentation'
+//include ':feature:reels:domain'
+//include ':feature:reels:data'
