--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':feature:news:presentation'
 //include ':feature:reels:domain'
 //include ':feature:reels:data'
 include ':core:data'
+include ':core:domain'
