--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':feature:news:presentation'
 //include ':feature:reels:data'
 include ':core:data'
 include ':core:domain'
+include ':core:ui'
