--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':feature:news:presentation'
 include ':core:data'
 include ':core:domain'
 include ':core:ui'
+include ':feature:detail:presentation'
