--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':core:data'
 include ':core:domain'
 include ':core:ui'
 include ':feature:detail:presentation'
+include ':core:designsystem'
