--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':core:domain'
 include ':core:ui'
 include ':feature:detail:presentation'
 include ':core:designsystem'
+include ':build-logic:convention'
