--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':core:ui'
 include ':feature:detail:presentation'
 include ':core:designsystem'
 include ':build-logic:convention'
+include ':core:datastore'
