--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':feature:detail:presentation'
 include ':core:designsystem'
 include ':build-logic:convention'
 include ':core:datastore'
+include ':core:model'
