--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':core:designsystem'
 include ':build-logic:convention'
 include ':core:datastore'
 include ':core:model'
+include ':core:network'
