--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':build-logic:convention'
 include ':core:datastore'
 include ':core:model'
 include ':core:network'
+include ':feature:onboarding'
