--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ coil-compose = "2.4.0"
 kotlinx-serialization-json = "1.3.2"
 datastore = "1.0.0"
 org-jetbrains-kotlin-plugin-serialization = "1.8.22"
+foundation = "1.4.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -64,6 +65,10 @@ coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coi
 
 datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+
+# foundation
+
+foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
 
 # test
