--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ kotlinx-serialization-json = "1.3.2"
 datastore = "1.0.0"
 org-jetbrains-kotlin-plugin-serialization = "1.8.22"
 foundation = "1.4.3"
+hilt-navigation-compose = "1.0.0-beta01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -51,6 +52,8 @@ converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", 
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
+
 
 # Room
 
