--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,14 @@ android {
 
 dependencies {
 
+    implementation(project(":core:designsystem"))
+    implementation(project(":core:model"))
+    implementation(project(":core:common"))
+
+    implementation(project(":feature:onboarding"))
+
+
+
     implementation(libs.androidx.core.ktx)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
@@ -66,12 +74,7 @@ dependencies {
 //    implementation project(Modules.reelsPresentation)
 //
 
-    implementation project(Modules.coreData)
-    implementation project(Modules.coreDomain)
-    implementation project(Modules.coreUi)
 
-    implementation project(Modules.newsData)
-    implementation project(Modules.newsPresentation)
 
 
     testImplementation 'junit:junit:4.13.2'
