--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation(project(":feature:onboarding"))
 
 
+    implementation(libs.navigation.compose)
 
     implementation(libs.androidx.core.ktx)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
