--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ hilt-navigation-compose = "1.0.0-beta01"
 navigation-compose = "2.5.3"
 
 kotlinPlugin = "1.8.10"
+kotlinx-coroutines-core = "1.7.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -77,6 +78,7 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 
 foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
 
 # test
 
