--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,5 @@ include ':core:model'
 include ':core:network'
 include ':feature:onboarding'
 include ':core:common'
+//include ':bookmark'
+include ':feature:bookmark'
