--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ include ':feature:onboarding'
 include ':core:common'
 //include ':bookmark'
 include ':feature:bookmark'
+include ':core:database'
