--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,13 @@ android {
 
 dependencies {
 
+    implementation(project(":core:common"))
     implementation(project(":core:designsystem"))
     implementation(project(":core:model"))
-    implementation(project(":core:common"))
     implementation(project(":core:domain"))
     implementation(project(":core:data"))
+    implementation(project(":core:network"))
+    implementation(project(":core:database"))
 
     implementation(project(":feature:onboarding"))
 
