--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,7 @@ include ':feature:news:presentation'
 include ':core:data'
 include ':core:domain'
 include ':core:ui'
-include ':feature:detail:presentation'
+//include ':feature:detail:presentation'
 include ':core:designsystem'
 include ':build-logic:convention'
 include ':core:datastore'
@@ -35,3 +35,4 @@ include ':core:common'
 //include ':bookmark'
 include ':feature:bookmark'
 include ':core:database'
+include ':feature:details'
