--- a/settings.gradle
+++ b/settings.gradle
@@ -36,3 +36,4 @@ include ':core:common'
 include ':feature:bookmark'
 include ':core:database'
 include ':feature:details'
+include ':feature:search'
