--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,4 @@ include ':feature:bookmark'
 include ':core:database'
 include ':feature:details'
 include ':feature:search'
+include ':feature:home'
