--- a/settings.gradle
+++ b/settings.gradle
@@ -14,10 +14,10 @@ dependencyResolutionManagement {
 }
 rootProject.name = "NewsRoom"
 include ':app'
-include ':feature:news:data'
+//include ':feature:news:data'
 //include ':core_data'
-include ':feature:news:domain'
-include ':feature:news:presentation'
+//include ':feature:news:domain'
+//include ':feature:news:presentation'
 //include ':feature:reels:presentation'
 //include ':feature:reels:domain'
 //include ':feature:reels:data'
@@ -38,3 +38,4 @@ include ':core:database'
 include ':feature:details'
 include ':feature:search'
 include ':feature:home'
+include ':feature:news'
