--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation(project(":feature:details"))
     implementation(project(":feature:search"))
     implementation(project(":feature:home"))
+    implementation(project(":feature:news"))
 
 
     implementation(libs.navigation.compose)
