--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ navigation-compose = "2.5.3"
 
 kotlinPlugin = "1.8.10"
 kotlinx-coroutines-core = "1.7.1"
+gson = "2.9.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -79,6 +80,9 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
+
+
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 # test
 
