--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation(project(":core:data"))
     implementation(project(":core:network"))
     implementation(project(":core:database"))
+    implementation(project(":core:ui"))
 
     implementation(project(":feature:onboarding"))
     implementation(project(":feature:bookmark"))
