--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation(project(":core:database"))
     implementation(project(":core:ui"))
 
+
+    implementation(project(":navigation"))
+
     implementation(project(":feature:onboarding"))
     implementation(project(":feature:bookmark"))
     implementation(project(":feature:details"))
