--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,18 +70,18 @@ dependencies {
     implementation(project(":feature:home"))
     implementation(project(":feature:news"))
 
-
-    implementation(libs.navigation.compose)
     implementation(libs.gson)
+    implementation(libs.core.splashscreen)
 
     implementation(libs.androidx.core.ktx)
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation(libs.activity.compose)
+    implementation(platform(libs.compose.bom))
+    implementation(libs.ui)
+    implementation(libs.ui.graphics)
+    implementation(libs.ui.tooling.preview)
+    implementation(libs.material3)
+    implementation(libs.navigation.compose)
 
 
     implementation(libs.hilt.android)
