--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ navigation-compose = "2.5.3"
 kotlinPlugin = "1.8.10"
 kotlinx-coroutines-core = "1.7.1"
 gson = "2.9.1"
+core-splashscreen ="1.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -81,8 +82,9 @@ foundation = { group = "androidx.compose.foundation", name = "foundation", versi
 
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
 
-
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+
+core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splashscreen" }
 
 # test
 
