--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
 
 dependencies {
 
-    implementation(project(":core:common"))
+    //implementation(project(":core:common"))
     implementation(project(":core:designsystem"))
     implementation(project(":core:model"))
     implementation(project(":core:domain"))
