--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ core-splashscreen ="1.0.1"
 
 paging-runtime = "3.1.1"
 paging-compose = "3.2.0-rc01"
+paging-common = "3.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -83,6 +84,8 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging-runtime" }
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging-compose" }
+paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "paging-common" }
+
 
 # foundation
 
