--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation(project(":core:network"))
     implementation(project(":core:database"))
     implementation(project(":core:ui"))
+    implementation(project(":core:presentation"))
 
 
     implementation(project(":navigation"))
