--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,8 +23,8 @@ kotlinx-serialization-json = "1.3.2"
 datastore = "1.0.0"
 org-jetbrains-kotlin-plugin-serialization = "1.8.22"
 foundation = "1.4.3"
-hilt-navigation-compose = "1.0.0-beta01"
-navigation-compose = "2.5.3"
+hilt-navigation-compose = "1.2.0"
+navigation-compose = "2.7.7"
 
 kotlinPlugin = "1.8.10"
 kotlinx-coroutines-core = "1.7.1"
