--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,9 +31,9 @@ kotlinx-coroutines-core = "1.7.1"
 gson = "2.10"
 core-splashscreen ="1.0.1"
 
-paging-runtime = "3.1.1"
-paging-compose = "3.2.0-rc01"
-paging-common = "3.1.0"
+paging-runtime = "3.2.1"
+paging-compose = "3.2.1"
+paging-common = "3.2.1"
 room-paging = "2.4.0"
 okhttp = "5.0.0-alpha.11"
 
